# financial-crisis

./: .env.example  .gitignore  .ignore  Cargo.toml  README.md  justfile
apps/api/: Cargo.toml
apps/api/src/: assessment.rs  backtest.rs  config.rs  data_source.rs  demo.rs  demo_seed.rs  handlers.rs  history_builder.rs  history_replay.rs  lib.rs  main.rs  state.rs  tests.rs
apps/api/src/assessment/: common.rs  context.rs  market_context.rs  mvp_state.rs  posture.rs  probability.rs  runtime_policy.rs  tests.rs
apps/api/src/assessment/context/: analogs.rs  backtests.rs  events.rs  freshness.rs  indicators.rs  runtime.rs
apps/api/src/assessment/posture/: guidance.rs  position.rs
apps/api/src/assessment/probability/: actionability.rs  features.rs  heuristic.rs  trace.rs
apps/api/src/assessment/tests/: actionability.rs  evidence.rs  mod.rs  position.rs  posture.rs  time_bucket.rs
apps/api/src/backtest/: actionability.rs  rolling_audit.rs  scenarios.rs  timeline.rs
apps/api/src/data_source/: lineage.rs
apps/api/src/demo/: tests.rs
apps/api/src/demo_seed/: alerts.rs  indicators.rs  observations.rs  sources.rs
apps/api/src/handlers/: research_audit.rs  source_status.rs
apps/api/src/handlers/research_audit/: cooldown_audit.rs  dataset_summary.rs  funding_stress_audit.rs  leadtime_audit.rs  prewarning_gap_audit.rs  runtime_contribution_audit.rs  workstream_audit.rs
apps/api/src/history_builder/: tests.rs
apps/api/src/history_replay/: cache.rs  transform.rs
apps/worker/: Cargo.toml
apps/worker/src/: actionability.rs  formal.rs  lib.rs  main.rs  model.rs  output_paths.rs  probability.rs  release_review.rs  reporting.rs  scenario.rs  support.rs  tests.rs  training.rs
apps/worker/src/actionability/: guardrails.rs  summary.rs  threshold.rs  train.rs
apps/worker/src/commands/: audit.rs  backfill.rs  dataset.rs  db.rs  feature.rs  mod.rs  pipeline.rs  refresh.rs  release.rs  research.rs  snapshot.rs
apps/worker/src/commands/backfill/: execute.rs  options.rs
apps/worker/src/commands/dataset/: build.rs  execute.rs  options.rs  report.rs  scenarios.rs  split.rs
apps/worker/src/commands/feature/: coverage.rs  options.rs  snapshot.rs  visibility.rs
apps/worker/src/commands/pipeline/: dataset.rs  execute.rs  options.rs
apps/worker/src/commands/release/: guardrails.rs  lifecycle.rs  options.rs  probability.rs  review.rs
apps/worker/src/model/: calibration.rs  constraints.rs  regime.rs  weighting.rs
apps/worker/src/probability/: overlay.rs  threshold.rs
apps/worker/src/release_review/: coverage.rs  historical.rs  runtime.rs
apps/worker/src/reporting/: audit.rs  release_review.rs
apps/worker/src/scenario/: episodes.rs  horizon.rs  models.rs  selection.rs  timing.rs
apps/worker/src/tests/: fixtures.rs  options.rs  quality.rs  review.rs  split_requirements.rs  training.rs
apps/worker/src/training/: pipeline.rs  regimes.rs  split.rs  types.rs
config/: app.example.toml  (+4 more)
crates/ingestion/: Cargo.toml
crates/ingestion/src/: contract.rs  http_client.rs  lib.rs
crates/ingestion/src/connectors/: boj.rs  fred.rs  fred_graph_csv.rs  gdelt.rs  mock.rs  mod.rs  sec_edgar.rs  treasury_yield.rs  world_bank.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs  sqlite.rs
crates/storage/src/sqlite/: feature_snapshots.rs  formal_datasets.rs  helpers.rs  historical_replay.rs  metadata.rs  migrations.rs  observations.rs  operational.rs  prediction_snapshots.rs  releases.rs  rows.rs  seeds.rs  tests.rs
(+413 files in other folders)
