[workspace]
members = [
    "apps/api",
    "apps/worker",
    "crates/domain",
    "crates/ingestion",
    "crates/scoring",
    "crates/storage",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://example.invalid/financial-crisis"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = "0.7"
chrono = { version = "0.4", features = ["serde"] }
csv = "1.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
roxmltree = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "sqlite", "chrono", "uuid", "json"] }
thiserror = "1.0"
tokio = { version = "1.38", features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
url = "2.5"
uuid = { version = "1.10", features = ["serde", "v4"] }
