[package]
name = "fc-api"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
fc-domain = { path = "../../crates/domain" }
fc-scoring = { path = "../../crates/scoring" }
fc-storage = { path = "../../crates/storage" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[dev-dependencies]
tower = "0.5"
