[package]
name = "fc-worker"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
fc-domain = { path = "../../crates/domain" }
fc-ingestion = { path = "../../crates/ingestion" }
fc-storage = { path = "../../crates/storage" }
reqwest.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
