[package]
name = "fc-ingestion"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
csv.workspace = true
fc-domain = { path = "../domain" }
reqwest.workspace = true
roxmltree.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
uuid.workspace = true
